--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <h1>SAludos</h1>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum deserunt vitae accusantium, velit pariatur vel laborum a corrupti totam? Totam dolores laboriosam iste numquam ipsa minus! Iure ipsa corrupti voluptatum?</p>
 </body>
 </html>
